@@ -1,3 +1,3 @@
-EBUILD udoo-sources-3.14.28.ebuild 523 SHA256 27adb3ad30ca1dd83e029b15cd279a4ddfcfd3d5c934351eecf8bba23056613c SHA512 92f1ae1dc5beae56e4616902766858710a74424620e93adafaeaeba6836a179e42cbf6184b73d74929a7f42d0c8e6956763b467aa46746d69fff7e3e9da7c0d7 WHIRLPOOL cde87e77f38227f6f4ca0fcc29d472d710c7ace4a856431674d8d97f1e5d1e88731af5f02e067a2fea9ca75607c2b98d215d87e3e5273da6470f83c643886270
-MISC ChangeLog 179 SHA256 92f3d89de0d9f3239d29a5fd3511273391cbb13f20f9e57d0e3512e8ea85588f SHA512 95305f516e10151dcdde6ce0f5be3995e1f70dc250c40d4240dc7674a36332f760bd9ed1623949540c0369c94248728b50348b9f41bf1b4b60c9c7bf58b0465b WHIRLPOOL e563aebe7ddd835b29fe0cd0a6dd34b8ef058a5c5c2b40af312f1fb215f96a7e12a19a415c9d584393bfa99655e4bb9d3ad56c0a9edf53b2c98184b715ff28f3
+EBUILD udoo-sources-3.14.56.ebuild 567 SHA256 386eb0d0cbbe5c85b1de156a640b95e98ecbf6e14d9b4ad752411dd911a2205f SHA512 73a5d4170cfbaf5860cb26726ddb9f88eb1e4e7fa2633cea52365dbdb055730eb7583f23dc3d211a72e5aa125469a875fb37a51a400b1db10327c234e24ddff4 WHIRLPOOL d777a92140888141bad595a8d753b475d92d0385811b2b870a08149b519228099c94a4167c8ade7b57fc56dd5d71710ef7dbb5a5f7b9741a59e861d9bda208b7
+MISC ChangeLog 369 SHA256 170739eea906a8aab04c4e94c43a361003f9a95e9867468e99aac56a0292724a SHA512 2b97006fc56b9a943337d8b36d898abdbd983e2d69042781ab13aa6c3787304adf8e87ccf6e62288e027e06f35dfdec2fb326244f89846234f0315512c58d0d4 WHIRLPOOL 3b8543b5d8772a5339e1940556fe0dcdd1b7e32157d81a44542be89f81c78656d5d97a8ba4206e70965af328e78d745d74c10d97f421c5344b031053bc1cecb1
 MISC metadata.xml 283 SHA256 0374fa9697c91a173fe2625f15be27d31e9b09be6dfbea85d3c552d06584c23c SHA512 a278beee19b67e5987cee502814752f261bc0342593799d70f2bbc3c20f03acc549b6db70414451d7406a5050b2a442c91d5198115f4e84f8390e21f61d95bf1 WHIRLPOOL 980ea035b04467d9cf71e41863103525278acb794a9baf7947e012131d53e929bd0fb0d0b5bdc2d207062394829b3acd63264c4c34120e2184a035fbe0900a79
